@@ -1,5 +1,6 @@
 2006-02-02 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Small update to manual.
+	* Add getRecursiveSelect function in class mod_web_dmail.
 
 2006-02-02  Thorsten Kahler  <thorsten.kahler@dkd.de>
 	* Include TS setup (for dmailer boundaries) optionally
